force-app/main/default/objects/Activity/fields/Age_at_time_of_assessment__c.field-meta.xml
<CustomField>
    <fullName>Age_at_time_of_assessment__c</fullName>
    <description>The child&apos;s age at the time of the assessment</description>
    <inlineHelpText>The child&apos;s age at the time of the assessment</inlineHelpText>
    <label>Age at time of assessment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>