force-app/main/default/objects/Activity/fields/Assessemnt_Number__c.field-meta.xml
<CustomField>
    <fullName>Assessemnt_Number__c</fullName>
    <description>Assessment X of four assessments for the playgroup program</description>
    <inlineHelpText>Assessment X of four assessments for the playgroup program</inlineHelpText>
    <label>Assessemnt Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>