force-app/main/default/objects/Activity/fields/Event_Participitation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participitation__c</fullName>
    <label>Event Participitation</label>
    <type>TextArea</type>
</CustomField>