force-app/main/default/objects/Activity/fields/External_Referral__c.field-meta.xml
<CustomField>
    <fullName>External_Referral__c</fullName>
    <label>External Referral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Referral</valueSetName>
    </valueSet>
</CustomField>