force-app/main/default/objects/Activity/fields/Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance__c</fullName>
    <description>Financial Assistance provided by HeartKids</description>
    <inlineHelpText>Financial Assistance provided by HeartKids</inlineHelpText>
    <label>Financial Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Assistance</valueSetName>
    </valueSet>
</CustomField>