force-app/main/default/objects/Activity/fields/Fundraiser_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Event_Name__c</fullName>
    <description>For legacy eTap data only - when a Task is created to represent a Participation type Journal Contact record this is the name of the event this Contact fundraised for</description>
    <label>Fundraiser Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>