force-app/main/default/objects/Activity/fields/Fundraiser_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Team_Name__c</fullName>
    <label>Fundraiser Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>