force-app/main/default/objects/Activity/fields/Fundraiser_Total_Raised__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Total_Raised__c</fullName>
    <label>Fundraiser Total Raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>