force-app/main/default/objects/Activity/fields/General_Practioner__c.field-meta.xml
<CustomField>
    <fullName>General_Practioner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referral</description>
    <inlineHelpText>Checklist item for external referral</inlineHelpText>
    <label>General Practioner</label>
    <type>Checkbox</type>
</CustomField>