force-app/main/default/objects/Activity/fields/Hospital_Location__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Location__c</fullName>
    <label>Hospital Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hospital_Location</valueSetName>
    </valueSet>
</CustomField>