force-app/main/default/objects/Activity/fields/Incoming_Referral__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Referral__c</fullName>
    <label>Incoming Referral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoming_Referrals</valueSetName>
    </valueSet>
</CustomField>