force-app/main/default/objects/Activity/fields/Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Contact__c</fullName>
    <description>The type of contact</description>
    <inlineHelpText>The type of contact</inlineHelpText>
    <label>Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Method_of_Contact</valueSetName>
    </valueSet>
</CustomField>