force-app/main/default/objects/Activity/fields/Number_of_Adults_Attending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Adults_Attending__c</fullName>
    <label>Number of Adults Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>