force-app/main/default/objects/Activity/fields/PG_Fine_Motor_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_Fine_Motor_Score__c</fullName>
    <label>ASQ3 Fine Motor Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>