force-app/main/default/objects/Activity/fields/PG_Gross_Motor_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>PG_Gross_Motor_Interpretation__c</fullName>
    <label>ASQ3 Gross Motor Interpretation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Above cut off</fullName>
            </value>
            <value>
                <fullName>Close to cut off</fullName>
            </value>
            <value>
                <fullName>Below cut off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>