force-app/main/default/objects/Activity/fields/PG_Language_Receptive_HELP__c.field-meta.xml
<CustomField>
    <fullName>PG_Language_Receptive_HELP__c</fullName>
    <label>HELP Language Receptive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age Appropriate</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>