force-app/main/default/objects/Activity/fields/PG_Personal_Social_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_Personal_Social_Score__c</fullName>
    <label>ASQ3 Personal-Social Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>