force-app/main/default/objects/Activity/fields/PG_Problem_Solving_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_Problem_Solving_Score__c</fullName>
    <label>ASQ3 Problem Solving Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>