force-app/main/default/objects/Activity/fields/PG_Social_Emotional_HELP__c.field-meta.xml
<CustomField>
    <fullName>PG_Social_Emotional_HELP__c</fullName>
    <label>HELP Social Emotional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age Appropriate</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>