force-app/main/default/objects/Activity/fields/Playgroup_Session_Non_Attendance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Session_Non_Attendance_Reason__c</fullName>
    <description>This is the reason the child and family did not attend the playgroup session</description>
    <inlineHelpText>This is the reason the child and family did not attend the playgroup session</inlineHelpText>
    <label>Playgroup Session Non Attendance Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Playgroup_Session_Non_Attendance_Reason</valueSetName>
    </valueSet>
</CustomField>