force-app/main/default/objects/Activity/fields/Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Amount__c</fullName>
    <description>For eTapestry data upload use only</description>
    <inlineHelpText>For eTapestry data upload use only
If Task Subject inc Event Name this is the amount of soft credits specific to that event</inlineHelpText>
    <label>Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>