force-app/main/default/objects/Activity/fields/Soft_Credit_Total_Pre_2021__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Total_Pre_2021__c</fullName>
    <description>For eTapestry data upload use only
Dependent was a constituent in eTapestry and had Soft Credits associated to them
This is the total of those soft credits</description>
    <inlineHelpText>For eTapestry data upload use only
Dependent was a constituent in eTapestry and had Soft Credits associated to them
This is the total of those soft credits</inlineHelpText>
    <label>Soft Credit Total Pre 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>