force-app/main/default/objects/Activity/fields/Support_Given__c.field-meta.xml
<CustomField>
    <fullName>Support_Given__c</fullName>
    <label>Support Given</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Given</valueSetName>
    </valueSet>
</CustomField>