force-app/main/default/objects/Activity/fields/Task_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_By__c</fullName>
    <description>Name of HK staff member who created this record in eTapestry - for use on pre-2021 records only</description>
    <inlineHelpText>Name of HK staff member who created this record in eTapestry - for use on pre-2021 records only</inlineHelpText>
    <label>Task Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>