force-app/main/default/objects/Activity/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <description>Time spent with the family</description>
    <inlineHelpText>Time spent with the family</inlineHelpText>
    <label>Time Spent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.50</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>1.50</fullName>
            </value>
            <value>
                <fullName>1.75</fullName>
            </value>
            <value>
                <fullName>2.00</fullName>
            </value>
            <value>
                <fullName>2.50</fullName>
            </value>
            <value>
                <fullName>2.75</fullName>
            </value>
            <value>
                <fullName>3.00</fullName>
            </value>
            <value>
                <fullName>0.08333</fullName>
                <isActive>false</isActive>
                <label>0.08333</label>
            </value>
            <value>
                <fullName>2.25</fullName>
                <isActive>false</isActive>
                <label>2.25</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>