force-app/main/default/objects/Activity/fields/Time_Spent_Min_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Min_Hrs__c</fullName>
    <description>Converts &apos;Time Spent (Num)&apos; into hours and minutes</description>
    <formula>TEXT(FLOOR( Time_Spent_Num__c )) + &apos; Hours &apos; + &apos; and &apos; + 
TEXT( FLOOR( ( ROUND( Time_Spent_Num__c ,2)-FLOOR( Time_Spent_Num__c ) ) * 60 ) ) + &apos; Minutes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent (Min_Hrs)</label>
    <type>Text</type>
</CustomField>