force-app/main/default/objects/Activity/fields/Time_Spent_Num__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Num__c</fullName>
    <formula>VALUE(Text( Time_Spent__c ))</formula>
    <label>Time Spent (Num)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>