force-app/main/default/objects/Activity/fields/Travel_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referral</description>
    <inlineHelpText>Checklist item for external referral</inlineHelpText>
    <label>Travel &amp; Insurance</label>
    <type>Checkbox</type>
</CustomField>